# rust-stm32-example

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
src/: main.rs
