[package]
name = "rust-stm32-1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
nb = "1.1"
stm32f0xx-hal = { version = "0.18.0", features = ["stm32f072"] }

[profile]
[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
